# scrapers-ca

./: .git-blame-ignore-revs  .gitignore  .pep8  .pre-commit-config.yaml  .travis.yml  README.md  constants.py  constants.rb  country-ca.csv  errors.txt  export_represent.py  patch.py  pupa_settings.py  pyproject.toml  requirements.in  requirements.txt  scrape.py  scrape_people.py  setup.py  tasks.py  tidy.py  tox.ini  urls.py  utils.py
ahuntsic-cartierville/: __init__.py
ajax/: __init__.py  people.py
anjou/: __init__.py
belleville/: __init__.py  people.py
brantford/: __init__.py  people.py
brossard/: __init__.py  people.py
burlington/: __init__.py  people.py
ca-nb/: __init__.py  people.py
ca-nl/: __init__.py
ca-ns/: __init__.py
ca-ns-cape_breton/: __init__.py  people.py
ca-on-burlington/: __init__.py  people.py
ca-on-caledon/: __init__.py
ca-on-cambridge/: people.py
ca-on-clarington/: __init__.py
ca-on-guelph/: __init__.py
ca-on-haldimand/: __init__.py
ca-on-lambton/: __init__.py
ca-on-newmarket/: __init__.py
ca-on-oakville/: __init__.py
ca-on-peterborough/: __init__.py  people.py
ca-on-st_catharines/: __init__.py
ca-on-thunder_bay/: __init__.py
ca-on-toronto/: __init__.py
ca-on-vaughan/: __init__.py
ca-pe/: __init__.py
ca-pe-stratford/: __init__.py
ca-pe-summerside/: __init__.py
ca-qc-ahuntsic-cartierville/: __init__.py
ca-qc-anjou/: __init__.py
ca-qc-cote-des-neiges-notre-dame-de-grace/: __init__.py
ca-qc-cote_st-luc/: people.py
ca-qc-dollard-des-ormeaux/: __init__.py
ca-qc-gatineau/: __init__.py
(+647 files in other folders)
